<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:scrollbarStyle="outsideInset"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/blanking"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"

        android:orientation="horizontal"></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"

        android:orientation="horizontal">

        <NumberPicker
            android:id="@+id/numberPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:scrollbarSize="10dp"
            android:solidColor="#CDDC39"
            android:soundEffectsEnabled="true"
            android:theme="@style/my_numberPicker_style" />


        <EditText
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:inputType="number"
            android:maxLength = "3"
            android:textColor="@color/red001"
            android:textSize="50sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv01Text"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="18sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"

        android:orientation="horizontal">

        <Switch
            android:id="@+id/swSound"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:checked="false"
            android:showText="false"
            android:splitTrack="false"
            android:switchTextAppearance="@style/TextAppearance.AppCompat.Body2"
            android:text="@string/swSound"
            android:textAlignment="center"
            android:textSize="18sp"
            android:theme="@style/mySwitch" />

        <Switch
            android:id="@+id/swFlash"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:checked="false"
            android:switchTextAppearance="@style/TextAppearance.AppCompat.Body2"
            android:text="@string/swFlash"
            android:textAlignment="center"
            android:textSize="18sp"
            android:theme="@style/mySwitch" />

        <Switch
            android:id="@+id/swVibrate"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:checked="false"
            android:switchTextAppearance="@style/TextAppearance.AppCompat.Body2"
            android:text="@string/swVibrate"
            android:textAlignment="center"
            android:textSize="18sp"
            android:theme="@style/mySwitch" />

        <!--        <Switch-->
        <!--            android:id="@+id/swLL"-->
        <!--            android:layout_width="0dp"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_weight="1"-->
        <!--            android:text="Screen" />-->


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"


        android:orientation="horizontal">

        <Button

            android:id="@+id/btnStart"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="start"
            android:text="@string/btnStart"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="cancel"
            android:text="@string/btnCancel"
            android:textSize="24sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"


        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="35sp" />

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"

            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adUnitId="ca-app-pub-3940256099942544/6300978111">
        </com.google.android.gms.ads.AdView>

    </LinearLayout>

    <!--    <Button-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:onClick="flash"-->
    <!--        android:text="Flash"/>-->

</LinearLayout>